src/main/kubernetes/deployment.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: helloworld
spec:
  replicas: 1
  template:
    metadata:
     labels:
        app: helloworld
    spec:
      containers:
      - name: helloworld
        image: registry.wildwidewest.xyz/repository/docker-repository/pocs/helloworld
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
      imagePullSecrets:
      - name: regsecret
