src/main/kubernetes/service.yml
kind: Service
apiVersion: v1
metadata:
  name: helloworld
spec:
  selector:
    app: helloworld
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
