src/main/kubernetes/helloworld.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: helloworld
spec:
  replicas: 1
  template:
    metadata:
     labels:
        app: helloworld
    spec:
      containers:
      - name: helloworld
        image: registry.wildwidewest.xyz/repository/docker-repository/pocs/helloworld
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
      imagePullSecrets:
      - name: regsecret
---
kind: Service
apiVersion: v1
metadata:
  name: helloworld
spec:
  selector:
    app: helloworld
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: helloworld
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - host: helloworld.k8.wildwidewest.xyz
    http:
      paths:
      - backend:
          serviceName: helloworld
          servicePort: 8080
