src/main/kubernetes/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: helloworld
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - host: helloworld.k8.wildwidewest.xyz
    http:
      paths:
      - backend:
          serviceName: helloworld
          servicePort: 8080
